== 0.2.0 / 2009-09-12

* RecaptchaOptions AJAX API Fix
* Added 'cucumber' as a test environment to skip
* Ruby 1.9 compat fixes
* Added option :message => 'Custom error message' to verify_recaptcha
* Removed dependency on ActiveRecord constant
* Add I18n

== 0.1.0 / 2008-2-8

* 1 major enhancement
	* Initial Gem Release