@@ -31,9 +31,9 @@ end
 
 require 'rake/testtask'
 Rake::TestTask.new(:test) do |test|
-  test.libs << 'lib' << 'test'
+  test.libs << 'test'
   test.pattern = 'test/**/*_test.rb'
-  test.verbose = true
+  # test.verbose = true
 end
 
 begin
